made more html edits to rotoscope and first section hidden

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>Bobsled</title>
+	<title>Adapty Floaty</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,500,600" rel="stylesheet">
 		<!--
@@ -36,16 +36,17 @@
 						<div class="header-wrap">
 							<div class="header-top d-flex justify-content-between align-items-center">
 								<div class="logo">
-									<a href="index.html"><img src="img/logo.png" alt=""></a>
+									<a style="color: white;"> Adapty Floaty </a>
+									<!-- <a href="index.html"><img src="img/logo.png" alt=""></a> -->
 								</div>
-								<div class="main-menubar d-flex align-items-center">
+								<!-- <div class="main-menubar d-flex align-items-center">
 									<nav class="hide">
 										<a href="index.html">Home</a>
 										<a href="generic.html">Generic</a>
 										<a href="elements.html">Elements</a>
 									</nav>
 									<div class="menu-bar"><span class="lnr lnr-menu"></span></div>
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -53,13 +54,13 @@
 				<div class="banner-area">
 					<div class="container">
 						<div class="row height align-items-center">
-							<div class="col-lg-7">
+							<!-- <div class="col-lg-7">
 								<div class="banner-content">
 									<h1 class="text-white text-uppercase mb-10">Don’t look anywhere, <br> This is the best place on web</h1>
 									<p class="text-white mb-30">Living in today’s metropolitan world of cellular phones, mobile computers and other high-tech gadgets is not just hectic but very</p>
 									<a href="#" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Get Started</span><span class="lnr lnr-arrow-right"></span></a>
 								</div>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</div>
@@ -71,13 +72,18 @@
 					<div class="row justify-content-center">
 						<div class="col-lg-6">
 							<div class="section-title text-center">
-								<h2>Our Working Process</h2>
-								<p>It won’t be a bigger problem to find one video game lover in your neighbor. Since the introduction of Virtual Game, it has been achieving</p>
+								<h2>Our Rotoscope</h2>
+								<!-- <p>It won’t be a bigger problem to find one video game lover in your neighbor. Since the introduction of Virtual Game, it has been achieving</p> -->
 							</div>
 						</div>
 					</div>
 					<div class="total-work-process d-flex flex-wrap justify-content-around align-items-center">
-						<div class="single-work-process">
+						<center>
+							<div>
+									<img src="img/elements/rotoscope.png" style="width: 50%;">
+							</div>
+						</center>
+						<!-- <div class="single-work-process">
 							<div class="work-icon-box">
 								<span class="lnr lnr-funnel"></span>
 							</div>
@@ -109,7 +115,7 @@
 								<span class="lnr lnr-smile"></span>
 							</div>
 							<h4 class="caption">4. Final Design</h4>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
@@ -300,8 +306,8 @@
 						<div class="col-md-4">
 							<div class="single-widget">
 								<div class="desc">
-									<h6 class="title">Address</h6>
-									<p>56/8, panthapath, west <br> dhanmondi, kalabagan</p>
+									<h6 class="title">Members</h6>
+									<p> Leon Cheng <br> Daniel Hong </p>
 								</div>
 							</div>
 						</div>
@@ -310,13 +316,13 @@
 								<div class="desc">
 									<h6 class="title">Email Address</h6>
 									<div class="contact">
-										<a href="mailto:info@dataarc.com">info@dataarc.com</a> <br>
-										<a href="mailto:support@dataarc.com">support@dataarc.com</a>
+										<a href="mailto:leonc@mit.edu">leonc@mit.edu</a> <br>
+										<a href="mailto:dhong98@mit.edu">dhong98@mit.edu</a>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4">
+						<!-- <div class="col-md-4">
 							<div class="single-widget">
 								<div class="desc">
 									<h6 class="title">Phone Number</h6>
@@ -326,15 +332,15 @@
 									</div>
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 				<footer>
 					<div class="container">
 						<div class="footer-content d-flex justify-content-between align-items-center flex-wrap">
-							<div class="logo">
+							<!-- <div class="logo">
 								<a href="index.html"><img src="img/logo.png" alt=""></a>
-							</div>
+							</div> -->
 							<div class="copy-right-text">Copyright &copy; 2017  |  All rights reserved to <a href="#">Dinomuz inc.</a> Designed by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>
 							<div class="footer-social">
 								<a href="#"><i class="fa fa-facebook"></i></a>
