--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
 					<div class="single-remark">
 						<div class="row no-gutters">
 							<div class="col-lg-7 col-md-6">
-								<div class="remark-thumb" style="background: url(img/r1.jpg);"></div>
+								<!-- <div class="remark-thumb" style="background: url(img/r1.jpg);"></div> -->
+								<iframe src="https://drive.google.com/file/d/1-MF3WSH3C1tqEC7yBhhfR--1ycyNELvB/preview" width="100%" height="100%"></iframe>							
 							</div>
 							<div class="col-lg-5 col-md-6">
 								<div class="remark-desc">
