3d video put on html

--- a/index.html
+++ b/index.html
@@ -203,7 +203,10 @@
 								</div>
 							</div>
 							<div class="col-lg-5 col-md-6">
-								<div class="remark-thumb" style="background: url(img/r2.jpg);"></div>
+								<!-- <div class="remark-thumb" style="background: url(img/r2.jpg);"></div> -->
+								<video width="100%" controls loop autoplay>
+									<source src="vid/orange-vest.mp4" type="video/mp4">
+								</video>
 							</div>
 						</div>
 					</div>
