--- a/index.html
+++ b/index.html
@@ -182,7 +182,10 @@
 						<div class="row no-gutters">
 							<div class="col-lg-7 col-md-6">
 								<!-- <div class="remark-thumb" style="background: url(img/r1.jpg);"></div> -->
-								<iframe src="https://drive.google.com/file/d/1-MF3WSH3C1tqEC7yBhhfR--1ycyNELvB/preview" width="100%" height="100%"></iframe>							
+								<!-- <iframe src="https://drive.google.com/file/d/1-MF3WSH3C1tqEC7yBhhfR--1ycyNELvB/preview" width="100%" height="100%"></iframe>							 -->
+								<video width="100%" controls autoplay>
+									<source src="vid/finalVideo.mp4" type="video/mp4">
+								</video>
 							</div>
 							<div class="col-lg-5 col-md-6">
 								<div class="remark-desc">
