--- a/index.html
+++ b/index.html
@@ -124,18 +124,37 @@
 			<!-- Start Feature Area -->
 			<section class="featured-area">
 				<div class="container">
-					<div class="row justify-content-center">
+					<!-- <div class="row justify-content-center">
 						<div class="col-lg-6">
 							<div class="section-title text-center">
 								<h2 class="text-white">Our Exclusive Features</h2>
 								<p class="text-white">Living in today’s metropolitan world of cellular phones, mobile computers and other high-tech gadgets is not just hectic but very </p>
 							</div>
 						</div>
-					</div>
+					</div> -->
 					<div class="row">
+
 						<div class="col-md-4">
 							<div class="single-feature">
-								<div class="thumb" style="background: url(img/t1.jpg);"></div>
+								<!-- <div class="thumb" style="background: url(img/t1.jpg);"></div> -->
+								<!-- <video width="100%" autoplay loop controls> -->
+									<!-- <source src="vid/milestone1.mp4"> -->
+								<!-- </video> -->
+								<div class="desc text-center mt-30">
+									<h4 class="text-white">Milestones</h4>
+									<p class="text-white">Weekly goals set and discussed with mentors</p>
+									<!-- <a href="#" class="primary-btn"><span>Read More</span></a> -->
+								</div>
+							</div>
+						</div>
+
+						
+						<div class="col-md-4">
+							<div class="single-feature">
+								<!-- <div class="thumb" style="background: url(img/t1.jpg);"></div> -->
+								<video width="100%" autoplay loop controls>
+									<source src="vid/milestone1.mp4">
+								</video>
 								<div class="desc text-center mt-30">
 									<h4 class="text-white">Creative Design</h4>
 									<p class="text-white">Few would argue that, despite the advancements of feminism over the past three decades, women still face a double</p>
@@ -145,7 +164,10 @@
 						</div>
 						<div class="col-md-4">
 							<div class="single-feature">
-								<div class="thumb" style="background: url(img/t2.jpg);"></div>
+								<!-- <div class="thumb" style="background: url(img/t2.jpg);"></div> -->
+								<video width="100%" autoplay loop controls>
+									<source src="vid/milestone2.mp4">
+								</video>
 								<div class="desc text-center mt-30">
 									<h4 class="text-white">Appropriate UX</h4>
 									<p class="text-white">There are advances being made in science and technology everyday, and a good example of this is the LCD monitor. LCD </p>
@@ -155,7 +177,10 @@
 						</div>
 						<div class="col-md-4">
 							<div class="single-feature">
-								<div class="thumb" style="background: url(img/t3.jpg);"></div>
+								<!-- <div class="thumb" style="background: url(img/t3.jpg);"></div> -->
+								<video width="100%" autoplay loop controls>
+									<source src="vid/milestone3.mp4">
+								</video>
 								<div class="desc text-center mt-30">
 									<h4 class="text-white">Super Clean Code</h4>
 									<p class="text-white">Sony laptops are among the most well known laptops on today’s market. Sony is a name that over time has established itself</p>
@@ -163,6 +188,33 @@
 								</div>
 							</div>
 						</div>
+						<div class="col-md-4">
+							<div class="single-feature">
+								<!-- <div class="thumb" style="background: url(img/t3.jpg);"></div> -->
+								<video width="100%" autoplay loop controls>
+									<source src="vid/milestone4.mp4">
+								</video>
+								<div class="desc text-center mt-30">
+									<h4 class="text-white">Super Clean Code</h4>
+									<p class="text-white">Sony laptops are among the most well known laptops on today’s market. Sony is a name that over time has established itself</p>
+									<a href="#" class="primary-btn"><span>Read More</span></a>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="single-feature">
+								<!-- <div class="thumb" style="background: url(img/t3.jpg);"></div> -->
+								<video width="100%" autoplay loop controls>
+									<source src="vid/milestone5.mp4">
+								</video>
+								<div class="desc text-center mt-30">
+									<h4 class="text-white">Super Clean Code</h4>
+									<p class="text-white">Sony laptops are among the most well known laptops on today’s market. Sony is a name that over time has established itself</p>
+									<a href="#" class="primary-btn"><span>Read More</span></a>
+								</div>
+							</div>
+						</div>
+
 					</div>
 				</div>
 			</section>
