update milestone descrips

--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
 									<source src="vid/milestone1.mp4">
 								</video>
 								<div class="desc text-center mt-30">
-									<h4 class="text-white">Creative Design</h4>
-									<p class="text-white">Few would argue that, despite the advancements of feminism over the past three decades, women still face a double</p>
-									<a href="#" class="primary-btn"><span>Read More</span></a>
+									<h4 class="text-white">Milestone #1</h4>
+									<p class="text-white">Solenoid wired and programmed to release air from a container</p>
+									<!-- <a href="#" class="primary-btn"><span>Read More</span></a> -->
 								</div>
 							</div>
 						</div>
@@ -169,9 +169,9 @@
 									<source src="vid/milestone2.mp4">
 								</video>
 								<div class="desc text-center mt-30">
-									<h4 class="text-white">Appropriate UX</h4>
-									<p class="text-white">There are advances being made in science and technology everyday, and a good example of this is the LCD monitor. LCD </p>
-									<a href="#" class="primary-btn"><span>Read More</span></a>
+									<h4 class="text-white">Milestone #2</h4>
+									<p class="text-white"> Connect and read raw data from the water sensor </p>
+									<!-- <a href="#" class="primary-btn"><span>Read More</span></a> -->
 								</div>
 							</div>
 						</div>
@@ -182,8 +182,8 @@
 									<source src="vid/milestone3.mp4">
 								</video>
 								<div class="desc text-center mt-30">
-									<h4 class="text-white">Super Clean Code</h4>
-									<p class="text-white">Sony laptops are among the most well known laptops on today’s market. Sony is a name that over time has established itself</p>
+									<h4 class="text-white">Milestone #3</h4>
+									<p class="text-white">Establish an airtight connection between the solenoid valve and floaty</p>
 									<a href="#" class="primary-btn"><span>Read More</span></a>
 								</div>
 							</div>
@@ -195,8 +195,8 @@
 									<source src="vid/milestone4.mp4">
 								</video>
 								<div class="desc text-center mt-30">
-									<h4 class="text-white">Super Clean Code</h4>
-									<p class="text-white">Sony laptops are among the most well known laptops on today’s market. Sony is a name that over time has established itself</p>
+									<h4 class="text-white">Milestone #4</h4>
+									<p class="text-white">Wire up and connect compressed air container to the floaty</p>
 									<a href="#" class="primary-btn"><span>Read More</span></a>
 								</div>
 							</div>
@@ -208,8 +208,8 @@
 									<source src="vid/milestone5.mp4">
 								</video>
 								<div class="desc text-center mt-30">
-									<h4 class="text-white">Super Clean Code</h4>
-									<p class="text-white">Sony laptops are among the most well known laptops on today’s market. Sony is a name that over time has established itself</p>
+									<h4 class="text-white">Milestone #5</h4>
+									<p class="text-white">Connect all sensors adn actuators to one cohesive system that responds to water depth changes</p>
 									<a href="#" class="primary-btn"><span>Read More</span></a>
 								</div>
 							</div>
