fix 3d viz video

--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@
 							</div>
 							<div class="col-lg-5 col-md-6">
 								<div class="remark-desc">
-									<h4>Vector Illustration</h4>
-									<p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have allowed humanity to create slimmer, more portable technology.</p>
+									<h4>Final Video</h4>
+									<p>Get your Adapty Floaty!</p>
 									<a href="#" class="primary-btn"><span>View Project</span></a>
 								</div>
 							</div>
@@ -252,15 +252,15 @@
 						<div class="row no-gutters">
 							<div class="col-lg-7 col-md-6">
 								<div class="remark-desc">
-									<h4>Vector Illustration</h4>
-									<p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun and excitement it provides, others may experience gambling as an addictive and distractive habit. Statistics show that while 85 percent of the adult population in </p>
+									<h4>3D Vizualization</h4>
+									<p>Created using Rhino and Grasshopper</p>
 									<a href="#" class="primary-btn"><span>View Project</span></a>
 								</div>
 							</div>
 							<div class="col-lg-5 col-md-6">
 								<!-- <div class="remark-thumb" style="background: url(img/r2.jpg);"></div> -->
 								<video width="100%" controls loop autoplay>
-									<source src="vid/orange-vest.mp4" type="video/mp4">
+									<source src="vid/orange-vest_Trim.mp4" type="video/mp4">
 								</video>
 							</div>
 						</div>
@@ -268,12 +268,13 @@
 					<div class="single-remark">
 						<div class="row no-gutters">
 							<div class="col-lg-7 col-md-6">
-								<div class="remark-thumb" style="background: url(img/r3.jpg);"></div>
+								<!-- <div class="remark-thumb" style="background: url(img/r3.jpg);"></div> -->
+								<img src="img/grasshopper-model.PNG" width="100%">
 							</div>
 							<div class="col-lg-5 col-md-6">
 								<div class="remark-desc">
-									<h4>Vector Illustration</h4>
-									<p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have allowed humanity to create slimmer, more portable technology.</p>
+									<h4>Grasshopper</h4>
+									<p>Adjustable Floaty Model</p>
 									<a href="#" class="primary-btn"><span>View Project</span></a>
 								</div>
 							</div>
