add proposals and presentations

--- a/index.html
+++ b/index.html
@@ -291,9 +291,13 @@
 						</div>
 						<div class="col-lg-7">
 							<div class="story-box">
-								<h6 class="text-uppercase">From the part of beginning</h6>
-								<p>Usage of the Internet is becoming more common due to rapid advancement of technology and the power of globalization. Societies are becoming more inter-connected. Thoughts from different</p>
-								<a href="#" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Get Started</span><span class="lnr lnr-arrow-right"></span></a>
+								<h6 class="text-uppercase">Presentations and Proposals</h6>
+								<a href="pdfs/Technical Proposal.pdf" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Technical Proposal</span><span class="lnr lnr-arrow-right"></span></a>
+								<br><br>
+								<a href="pdfs/Midterm Presentation.pdf" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Midterm Presentation</span><span class="lnr lnr-arrow-right"></span></a>
+								<br><br>
+								<a href="pdfs/Final Presentation.pdf" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Final Presentation</span><span class="lnr lnr-arrow-right"></span></a>
+								<br><br>
 							</div>
 						</div>
 					</div>
