add Other Files Section

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 								<div class="remark-desc">
 									<h4>Final Video</h4>
 									<p>Get your Adapty Floaty!</p>
-									<a href="#" class="primary-btn"><span>View Project</span></a>
+									<!-- <a href="#" class="primary-btn"><span>View Project</span></a> -->
 								</div>
 							</div>
 						</div>
@@ -254,7 +254,7 @@
 								<div class="remark-desc">
 									<h4>3D Vizualization</h4>
 									<p>Created using Rhino and Grasshopper</p>
-									<a href="#" class="primary-btn"><span>View Project</span></a>
+									<!-- <a href="#" class="primary-btn"><span>View Project</span></a> -->
 								</div>
 							</div>
 							<div class="col-lg-5 col-md-6">
@@ -275,7 +275,7 @@
 								<div class="remark-desc">
 									<h4>Grasshopper</h4>
 									<p>Adjustable Floaty Model</p>
-									<a href="#" class="primary-btn"><span>View Project</span></a>
+									<!-- <a href="#" class="primary-btn"><span>View Project</span></a> -->
 								</div>
 							</div>
 						</div>
@@ -297,14 +297,33 @@
 								<a href="pdfs/Midterm Presentation.pdf" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Midterm Presentation</span><span class="lnr lnr-arrow-right"></span></a>
 								<br><br>
 								<a href="pdfs/Final Presentation.pdf" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Final Presentation</span><span class="lnr lnr-arrow-right"></span></a>
-								<br><br>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
 			<!-- End Story Area -->
-
+			<!-- Start Story Area -->
+			<section class="story-area">
+					<div class="container">
+						<div class="row align-items-center">
+							<div class="col-lg-1">
+							</div>
+							<div class="col-lg-7">
+								<div class="story-box">
+									<h6 class="text-uppercase">Other Files</h6>
+									<a href="code-files/all_together_code.ino" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Arduino Code</span><span class="lnr lnr-arrow-right"></span></a>
+									<br><br>
+									<a href="code-files/amazing life vest.gh" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Grasshopper File</span><span class="lnr lnr-arrow-right"></span></a>
+									<br><br>
+									<a href="code-files/amazing life vest.3dm" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Rhino Model</span><span class="lnr lnr-arrow-right"></span></a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<!-- End Story Area -->
+	
 
 			<!-- Start Subscription Area -->
 			<section class="subscription-area">
@@ -333,7 +352,7 @@
 			</section>
 			<!-- End Subscription Area -->
 			<!-- Start Contact Form -->
-			<section class="contact-form-area">
+			<!-- <section class="contact-form-area">
 				<div class="container">
 					<div class="row justify-content-center">
 						<div class="col-lg-6">
@@ -361,7 +380,7 @@
 						</div>
 					</form>
 				</div>
-			</section>
+			</section> -->
 			<!-- End Contact Form -->
 			<!-- Start Footer Widget Area -->
 			<section class="footer-widget-area">
