update other files formatting

--- a/index.html
+++ b/index.html
@@ -312,11 +312,11 @@
 							<div class="col-lg-7">
 								<div class="story-box">
 									<h6 class="text-uppercase">Other Files</h6>
-									<a href="code-files/all_together_code.ino" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Arduino Code</span><span class="lnr lnr-arrow-right"></span></a>
+									<a href="code-files/all_together_code.ino"><span class="mr-10">Arduino Code</span></a>
 									<br><br>
-									<a href="code-files/amazing life vest.gh" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Grasshopper File</span><span class="lnr lnr-arrow-right"></span></a>
+									<a href="code-files/amazing life vest.gh" ><span class="mr-10">Grasshopper File</span><span ></span></a>
 									<br><br>
-									<a href="code-files/amazing life vest.3dm" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Rhino Model</span><span class="lnr lnr-arrow-right"></span></a>
+									<a href="code-files/amazing life vest.3dm" ><span class="mr-10">Rhino Model</span><span ></span></a>
 								</div>
 							</div>
 						</div>
