--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 					<div class="total-work-process d-flex flex-wrap justify-content-around align-items-center">
 						<center>
 							<div>
-									<img src="img/elements/rotoscope.png" style="width: 50%;">
+								<img src="img/full-rotoscope.PNG" width="50%">
+									<img src="img/rotoscope.png" style="width: 50%;">
 							</div>
 						</center>
 						<!-- <div class="single-work-process">
