--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 						<div class="col-md-4">
 							<div class="single-feature">
 								<!-- <div class="thumb" style="background: url(img/t1.jpg);"></div> -->
-								<video width="100%" autoplay loop controls>
+								<video width="100%"  controls>
 									<source src="vid/milestone1.mp4">
 								</video>
 								<div class="desc text-center mt-30">
@@ -166,7 +166,7 @@
 						<div class="col-md-4">
 							<div class="single-feature">
 								<!-- <div class="thumb" style="background: url(img/t2.jpg);"></div> -->
-								<video width="100%" autoplay loop controls>
+								<video width="100%" controls>
 									<source src="vid/milestone2.mp4">
 								</video>
 								<div class="desc text-center mt-30">
@@ -179,7 +179,7 @@
 						<div class="col-md-4">
 							<div class="single-feature">
 								<!-- <div class="thumb" style="background: url(img/t3.jpg);"></div> -->
-								<video width="100%" autoplay loop controls>
+								<video width="100%"  controls>
 									<source src="vid/milestone3.mp4">
 								</video>
 								<div class="desc text-center mt-30">
@@ -192,7 +192,7 @@
 						<div class="col-md-4">
 							<div class="single-feature">
 								<!-- <div class="thumb" style="background: url(img/t3.jpg);"></div> -->
-								<video width="100%" autoplay loop controls>
+								<video width="100%" controls>
 									<source src="vid/milestone4.mp4">
 								</video>
 								<div class="desc text-center mt-30">
@@ -205,7 +205,7 @@
 						<div class="col-md-4">
 							<div class="single-feature">
 								<!-- <div class="thumb" style="background: url(img/t3.jpg);"></div> -->
-								<video width="100%" autoplay loop controls>
+								<video width="100%" controls>
 									<source src="vid/milestone5.mp4">
 								</video>
 								<div class="desc text-center mt-30">
@@ -236,7 +236,7 @@
 							<div class="col-lg-7 col-md-6">
 								<!-- <div class="remark-thumb" style="background: url(img/r1.jpg);"></div> -->
 								<!-- <iframe src="https://drive.google.com/file/d/1-MF3WSH3C1tqEC7yBhhfR--1ycyNELvB/preview" width="100%" height="100%"></iframe>							 -->
-								<video width="100%" controls autoplay>
+								<video width="100%" controls >
 									<source src="vid/finalVideo.mp4" type="video/mp4">
 								</video>
 							</div>
@@ -260,7 +260,7 @@
 							</div>
 							<div class="col-lg-5 col-md-6">
 								<!-- <div class="remark-thumb" style="background: url(img/r2.jpg);"></div> -->
-								<video width="100%" controls loop autoplay>
+								<video width="100%" controls >
 									<source src="vid/orange-vest_Trim.mp4" type="video/mp4">
 								</video>
 							</div>
