updated top hearder css

--- a/index.html
+++ b/index.html
@@ -78,12 +78,19 @@
 						</div>
 					</div>
 					<div class="total-work-process d-flex flex-wrap justify-content-around align-items-center">
-						<center>
-							<div>
-								<img src="img/full-rotoscope.PNG" width="50%">
-									<img src="img/rotoscope.png" style="width: 50%;">
+						<!-- <center> -->
+							<div style="float:left;">
+								<img src="img/full-rotoscope.PNG" width="40%" style="float:left; margin: 20px;">
+								<!-- <img src="img/rotoscope.png" style="width: 50%;"> -->
+								Insert Description for Top Header here
+								Insert Description for Top Header here
+								Insert Description for Top Header here
+								Insert Description for Top Header here
+								Insert Description for Top Header here
+								Insert Description for Top Header here
+								Insert Description for Top Header here
 							</div>
-						</center>
+						<!-- </center> -->
 						<!-- <div class="single-work-process">
 							<div class="work-icon-box">
 								<span class="lnr lnr-funnel"></span>
