--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<div class="header-wrap">
 							<div class="header-top d-flex justify-content-between align-items-center">
 								<div class="logo">
-									<a style="color: white;"> Adapty Floaty </a>
+									<a style="color: white;"> Team 01: Leon Cheng, Daniel Hong </a>
 									<!-- <a href="index.html"><img src="img/logo.png" alt=""></a> -->
 								</div>
 								<!-- <div class="main-menubar d-flex align-items-center">
@@ -72,58 +72,23 @@
 					<div class="row justify-content-center">
 						<div class="col-lg-6">
 							<div class="section-title text-center">
-								<h2>Our Rotoscope</h2>
-								<!-- <p>It won’t be a bigger problem to find one video game lover in your neighbor. Since the introduction of Virtual Game, it has been achieving</p> -->
+								<h2>Adapty Floaty</h2>
 							</div>
 						</div>
 					</div>
 					<div class="total-work-process d-flex flex-wrap justify-content-around align-items-center">
-						<!-- <center> -->
-							<div style="float:left;">
+							<div>
 								<img src="img/full-rotoscope.PNG" width="40%" style="float:left; margin: 20px;">
-								<!-- <img src="img/rotoscope.png" style="width: 50%;"> -->
-								Insert Description for Top Header here
-								Insert Description for Top Header here
-								Insert Description for Top Header here
-								Insert Description for Top Header here
-								Insert Description for Top Header here
-								Insert Description for Top Header here
-								Insert Description for Top Header here
+								<p style="margin: 20px;">
+									Insert Description for Top Header here
+									Insert Description for Top Header here
+									Insert Description for Top Header here
+									Insert Description for Top Header here
+									Insert Description for Top Header here
+									Insert Description for Top Header here
+									Insert Description for Top Header here		
+								</p>
 							</div>
-						<!-- </center> -->
-						<!-- <div class="single-work-process">
-							<div class="work-icon-box">
-								<span class="lnr lnr-funnel"></span>
-							</div>
-							<h4 class="caption">1. Researching</h4>
-						</div>
-						<div class="work-arrow">
-							<img src="img/elements/work-arrow.png" alt="">
-						</div>
-						<div class="single-work-process">
-							<div class="work-icon-box">
-								<span class="lnr lnr-layers"></span>
-							</div>
-							<h4 class="caption">2. Wireframing</h4>
-						</div>
-						<div class="work-arrow">
-							<img src="img/elements/work-arrow.png" alt="">
-						</div>
-						<div class="single-work-process">
-							<div class="work-icon-box">
-								<span class="lnr lnr-paw"></span>
-							</div>
-							<h4 class="caption">3. Prototyping</h4>
-						</div>
-						<div class="work-arrow">
-							<img src="img/elements/work-arrow.png" alt="">
-						</div>
-						<div class="single-work-process">
-							<div class="work-icon-box">
-								<span class="lnr lnr-smile"></span>
-							</div>
-							<h4 class="caption">4. Final Design</h4>
-						</div> -->
 					</div>
 				</div>
 			</div>
