--- a/index.html
+++ b/index.html
@@ -80,13 +80,7 @@
 							<div>
 								<img src="img/full-rotoscope.PNG" width="40%" style="float:left; margin: 20px;">
 								<p style="margin: 20px;">
-									Insert Description for Top Header here
-									Insert Description for Top Header here
-									Insert Description for Top Header here
-									Insert Description for Top Header here
-									Insert Description for Top Header here
-									Insert Description for Top Header here
-									Insert Description for Top Header here		
+										Beginner swimmers often struggle when it comes time to tread water. Using a regular floatation device can give beginners a sense of what it is like, but having a conventional floating aid is very different from trying to float on your own. Our <b>Adapty Floaty</b> seeks to help people learn how to tread water by having a floaty that automatically inflates or deflates depending on how skilled the user is at treading.
 								</p>
 							</div>
 					</div>
@@ -192,17 +186,67 @@
 				</div>
 			</section>
 			<!-- End Feature Area -->
+			<!-- Start Feature Area -->
+			<section class="featured-area">
+				<div class="container">
+					<div class="row justify-content-center">
+						<div class="col-lg-6">
+							<div class="section-title text-center">
+								<h2 class="text-white">Sensors and Actuators</h2>
+								<!-- <p class="text-white">Living in today’s metropolitan world of cellular phones, mobile computers and other high-tech gadgets is not just hectic but very </p> -->
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-4">
+							<div class="single-feature">
+								<div class="thumb" style="background: url(img/t1.jpg);"></div>
+								<div class="desc text-center mt-30">
+									<h4 class="text-white">Water Pressure Sensor</h4>
+									<p class="text-white">To measure how well the user is swimming, we have a water pressure sensor that detects when the user’s neck is submerged in water. This sensor senses changes in depth.</p>
+									<!-- <a href="#" class="primary-btn"><span>Read More</span></a> -->
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+								<div class="single-feature">
+									<div class="thumb" style="background: url(img/t2.jpg);"></div>
+									<div class="desc text-center mt-30">
+										<h4 class="text-white">Solenoid Valve</h4>
+										<p class="text-white"> To deflate the floaty, we have a solenoid with one end connected to the inside of the floaty and the other leading out to the water. When the solenoid is opened, air will be pushed out of the floaty.
+											</p>
+										<!-- <a href="#" class="primary-btn"><span>Read More</span></a> -->
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="single-feature">
+									<div class="thumb" style="background: url(img/t2.jpg);"></div>
+									<div class="desc text-center mt-30">
+										<h4 class="text-white">Servo Motor</h4>
+										<p class="text-white"> 									
+											To inflate the floaty, we have a motor connected to a compressed air can, so when the motor is turned on it pushes the air can to add air to the floaty.
+										</p>
+										<!-- <a href="#" class="primary-btn"><span>Read More</span></a> -->
+									</div>
+								</div>
+							</div>
+			
+					</div>
+				</div>
+			</section>
+			<!-- End Feature Area -->
 			<!-- Start Remarkable Wroks Area -->
 			<section class="remarkable-area">
 				<div class="container">
-					<div class="row justify-content-center">
+					<!-- <div class="row justify-content-center">
 						<div class="col-lg-6">
 							<div class="section-title text-center">
 								<h2>Remarkable Works</h2>
 								<p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have allowed humanity to create slimmer, more </p>
 							</div>
 						</div>
-					</div>
+					</div> -->
 					<div class="single-remark">
 						<div class="row no-gutters">
 							<div class="col-lg-7 col-md-6">
@@ -256,6 +300,96 @@
 				</div>
 			</section>
 			<!-- End Remarkable Wroks Area -->
+			<!-- Start Remarkable Wroks Area -->
+			<section class="remarkable-area">
+				<div class="container">
+					<div class="row justify-content-center">
+						<div class="col-lg-6">
+							<div class="section-title text-center">
+								<h2>User Study</h2>
+								<div style="float: left;" width="50%">
+									<p>
+										Participants treaded water without training so that their proficiency could be measured. They then trained under the static setup, had their proficiency checked again, trained under the adaptive setup, and then had their proficiency checked one last time.
+									</p>
+								</div>
+								<div style="float: right;" width="50%">
+									<p style="float:right;">
+										In the static setup, participants practiced treading water with a fully inflated floaty.
+									</p>
+								</div>
+								<p>
+									In the adaptive setup, participants practiced treading water with our Adaptive Floaty, which inflated or deflated depending on whether or not they were struggling.
+										
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="single-remark">
+						<div class="row no-gutters">
+							<div class="col-lg-7 col-md-6">
+								<!-- <div class="remark-thumb" style="background: url(img/r1.jpg);"></div> -->
+								<!-- <iframe src="https://drive.google.com/file/d/1-MF3WSH3C1tqEC7yBhhfR--1ycyNELvB/preview" width="100%" height="100%"></iframe>							 -->
+								<!-- <video width="100%" controls > -->
+									<!-- <source src="vid/finalVideo.mp4" type="video/mp4"> -->
+								<!-- </video> -->
+								<img src="img/user-study-2.jpg" width="100%">
+							</div>
+							<div class="col-lg-5 col-md-6">
+								<div class="remark-desc">
+									<h4>Results</h4>
+									<p>
+										After the test we had participants take a survey to see how they felt about our product and how much they think it helped them improve their treading abilities. Average ratings were as follows:
+										<ol>
+											<li>Was it useful: 3.0 / 5</li>
+											<li>Was it fun: 4.7 / 5</li>
+											<li>Would you do it again: 4.0 / 5</li>
+										</ol>
+
+										<!-- Was it useful: 3.0 / 5
+										Was it fun: 4.7 / 5
+										Would you do it again: 3.0 / 5 -->
+									</p>
+									<!-- <a href="#" class="primary-btn"><span>View Project</span></a> -->
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="single-remark">
+						<div class="row no-gutters">
+							<div class="col-lg-7 col-md-6">
+								<div class="remark-desc">
+									<h4>3D Vizualization</h4>
+									<p>Created using Rhino and Grasshopper</p>
+									<!-- <a href="#" class="primary-btn"><span>View Project</span></a> -->
+								</div>
+							</div>
+							<div class="col-lg-5 col-md-6">
+								<!-- <div class="remark-thumb" style="background: url(img/r2.jpg);"></div> -->
+								<video width="100%" controls >
+									<source src="vid/orange-vest_Trim.mp4" type="video/mp4">
+								</video>
+							</div>
+						</div>
+					</div>
+					<div class="single-remark">
+						<div class="row no-gutters">
+							<div class="col-lg-7 col-md-6">
+								<!-- <div class="remark-thumb" style="background: url(img/r3.jpg);"></div> -->
+								<img src="img/grasshopper-model.PNG" width="100%">
+							</div>
+							<div class="col-lg-5 col-md-6">
+								<div class="remark-desc">
+									<h4>Grasshopper</h4>
+									<p>Adjustable Floaty Model</p>
+									<!-- <a href="#" class="primary-btn"><span>View Project</span></a> -->
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- End Remarkable Wroks Area -->
+
 			<!-- Start Story Area -->
 			<section class="story-area">
 				<div class="container">
