--- a/index.html
+++ b/index.html
@@ -91,6 +91,122 @@
 			<!-- Start Feature Area -->
 			<section class="featured-area">
 				<div class="container">
+					<div class="row justify-content-center">
+						<div class="col-lg-6">
+							<div class="section-title text-center">
+								<h2 class="text-white">Sensors and Actuators</h2>
+								<!-- <p class="text-white">Living in today’s metropolitan world of cellular phones, mobile computers and other high-tech gadgets is not just hectic but very </p> -->
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-4">
+							<div class="single-feature">
+								<div class="thumb" style="background: url(img/t1.jpg);"></div>
+								<div class="desc text-center mt-30">
+									<h4 class="text-white">Water Pressure Sensor</h4>
+									<p class="text-white">To measure how well the user is swimming, we have a water pressure sensor that detects when the user’s neck is submerged in water. This sensor senses changes in depth.</p>
+									<!-- <a href="#" class="primary-btn"><span>Read More</span></a> -->
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+								<div class="single-feature">
+									<div class="thumb" style="background: url(img/t2.jpg);"></div>
+									<div class="desc text-center mt-30">
+										<h4 class="text-white">Solenoid Valve</h4>
+										<p class="text-white"> To deflate the floaty, we have a solenoid with one end connected to the inside of the floaty and the other leading out to the water. When the solenoid is opened, air will be pushed out of the floaty.
+											</p>
+										<!-- <a href="#" class="primary-btn"><span>Read More</span></a> -->
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="single-feature">
+									<div class="thumb" style="background: url(img/t2.jpg);"></div>
+									<div class="desc text-center mt-30">
+										<h4 class="text-white">Servo Motor</h4>
+										<p class="text-white"> 									
+											To inflate the floaty, we have a motor connected to a compressed air can, so when the motor is turned on it pushes the air can to add air to the floaty.
+										</p>
+										<!-- <a href="#" class="primary-btn"><span>Read More</span></a> -->
+									</div>
+								</div>
+							</div>
+			
+					</div>
+				</div>
+			</section>
+			<!-- End Feature Area -->
+
+			<!-- Start Remarkable Wroks Area -->
+			<section class="remarkable-area">
+				<div class="container">
+					<!-- <div class="row justify-content-center">
+						<div class="col-lg-6">
+							<div class="section-title text-center">
+								<h2>Remarkable Works</h2>
+								<p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have allowed humanity to create slimmer, more </p>
+							</div>
+						</div>
+					</div> -->
+					<div class="single-remark">
+						<div class="row no-gutters" style="border:1px solid blue;">
+							<div class="col-lg-7 col-md-6">
+								<!-- <div class="remark-thumb" style="background: url(img/r1.jpg);"></div> -->
+								<!-- <iframe src="https://drive.google.com/file/d/1-MF3WSH3C1tqEC7yBhhfR--1ycyNELvB/preview" width="100%" height="100%"></iframe>							 -->
+								<video width="100%" controls style="padding: 10px;">
+									<source src="vid/finalVideo.mp4" type="video/mp4">
+								</video>
+							</div>
+							<div class="col-lg-5 col-md-6" ">
+								<div class="remark-desc" style="padding-top: 30%;">
+									<h1><b>Final Video</b></h1>
+									<p>Get your Adapty Floaty!</p>
+									<!-- <a href="#" class="primary-btn"><span>View Project</span></a> -->
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="single-remark">
+						<div class="row no-gutters">
+							<div class="col-lg-7 col-md-6">
+								<div class="remark-desc">
+									<h4>3D Vizualization</h4>
+									<p>Created using Rhino and Grasshopper</p>
+									<!-- <a href="#" class="primary-btn"><span>View Project</span></a> -->
+								</div>
+							</div>
+							<div class="col-lg-5 col-md-6">
+								<!-- <div class="remark-thumb" style="background: url(img/r2.jpg);"></div> -->
+								<video width="100%" controls >
+									<source src="vid/orange-vest_Trim.mp4" type="video/mp4">
+								</video>
+							</div>
+						</div>
+					</div>
+					<div class="single-remark">
+						<div class="row no-gutters">
+							<div class="col-lg-7 col-md-6">
+								<!-- <div class="remark-thumb" style="background: url(img/r3.jpg);"></div> -->
+								<img src="img/grasshopper-model.PNG" width="100%">
+							</div>
+							<div class="col-lg-5 col-md-6">
+								<div class="remark-desc">
+									<h4>Grasshopper</h4>
+									<p>Adjustable Floaty Model</p>
+									<!-- <a href="#" class="primary-btn"><span>View Project</span></a> -->
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- End Remarkable Wroks Area -->
+
+			<!-- Start Feature Area -->
+			<section class="featured-area">
+				<div class="container">
 					<!-- <div class="row justify-content-center">
 						<div class="col-lg-6">
 							<div class="section-title text-center">
@@ -186,120 +302,6 @@
 				</div>
 			</section>
 			<!-- End Feature Area -->
-			<!-- Start Feature Area -->
-			<section class="featured-area">
-				<div class="container">
-					<div class="row justify-content-center">
-						<div class="col-lg-6">
-							<div class="section-title text-center">
-								<h2 class="text-white">Sensors and Actuators</h2>
-								<!-- <p class="text-white">Living in today’s metropolitan world of cellular phones, mobile computers and other high-tech gadgets is not just hectic but very </p> -->
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-4">
-							<div class="single-feature">
-								<div class="thumb" style="background: url(img/t1.jpg);"></div>
-								<div class="desc text-center mt-30">
-									<h4 class="text-white">Water Pressure Sensor</h4>
-									<p class="text-white">To measure how well the user is swimming, we have a water pressure sensor that detects when the user’s neck is submerged in water. This sensor senses changes in depth.</p>
-									<!-- <a href="#" class="primary-btn"><span>Read More</span></a> -->
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4">
-								<div class="single-feature">
-									<div class="thumb" style="background: url(img/t2.jpg);"></div>
-									<div class="desc text-center mt-30">
-										<h4 class="text-white">Solenoid Valve</h4>
-										<p class="text-white"> To deflate the floaty, we have a solenoid with one end connected to the inside of the floaty and the other leading out to the water. When the solenoid is opened, air will be pushed out of the floaty.
-											</p>
-										<!-- <a href="#" class="primary-btn"><span>Read More</span></a> -->
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="single-feature">
-									<div class="thumb" style="background: url(img/t2.jpg);"></div>
-									<div class="desc text-center mt-30">
-										<h4 class="text-white">Servo Motor</h4>
-										<p class="text-white"> 									
-											To inflate the floaty, we have a motor connected to a compressed air can, so when the motor is turned on it pushes the air can to add air to the floaty.
-										</p>
-										<!-- <a href="#" class="primary-btn"><span>Read More</span></a> -->
-									</div>
-								</div>
-							</div>
-			
-					</div>
-				</div>
-			</section>
-			<!-- End Feature Area -->
-			<!-- Start Remarkable Wroks Area -->
-			<section class="remarkable-area">
-				<div class="container">
-					<!-- <div class="row justify-content-center">
-						<div class="col-lg-6">
-							<div class="section-title text-center">
-								<h2>Remarkable Works</h2>
-								<p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have allowed humanity to create slimmer, more </p>
-							</div>
-						</div>
-					</div> -->
-					<div class="single-remark">
-						<div class="row no-gutters">
-							<div class="col-lg-7 col-md-6">
-								<!-- <div class="remark-thumb" style="background: url(img/r1.jpg);"></div> -->
-								<!-- <iframe src="https://drive.google.com/file/d/1-MF3WSH3C1tqEC7yBhhfR--1ycyNELvB/preview" width="100%" height="100%"></iframe>							 -->
-								<video width="100%" controls >
-									<source src="vid/finalVideo.mp4" type="video/mp4">
-								</video>
-							</div>
-							<div class="col-lg-5 col-md-6">
-								<div class="remark-desc">
-									<h4>Final Video</h4>
-									<p>Get your Adapty Floaty!</p>
-									<!-- <a href="#" class="primary-btn"><span>View Project</span></a> -->
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="single-remark">
-						<div class="row no-gutters">
-							<div class="col-lg-7 col-md-6">
-								<div class="remark-desc">
-									<h4>3D Vizualization</h4>
-									<p>Created using Rhino and Grasshopper</p>
-									<!-- <a href="#" class="primary-btn"><span>View Project</span></a> -->
-								</div>
-							</div>
-							<div class="col-lg-5 col-md-6">
-								<!-- <div class="remark-thumb" style="background: url(img/r2.jpg);"></div> -->
-								<video width="100%" controls >
-									<source src="vid/orange-vest_Trim.mp4" type="video/mp4">
-								</video>
-							</div>
-						</div>
-					</div>
-					<div class="single-remark">
-						<div class="row no-gutters">
-							<div class="col-lg-7 col-md-6">
-								<!-- <div class="remark-thumb" style="background: url(img/r3.jpg);"></div> -->
-								<img src="img/grasshopper-model.PNG" width="100%">
-							</div>
-							<div class="col-lg-5 col-md-6">
-								<div class="remark-desc">
-									<h4>Grasshopper</h4>
-									<p>Adjustable Floaty Model</p>
-									<!-- <a href="#" class="primary-btn"><span>View Project</span></a> -->
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- End Remarkable Wroks Area -->
 			<!-- Start Remarkable Wroks Area -->
 			<section class="remarkable-area">
 				<div class="container">
@@ -354,38 +356,6 @@
 							</div>
 						</div>
 					</div>
-					<div class="single-remark">
-						<div class="row no-gutters">
-							<div class="col-lg-7 col-md-6">
-								<div class="remark-desc">
-									<h4>3D Vizualization</h4>
-									<p>Created using Rhino and Grasshopper</p>
-									<!-- <a href="#" class="primary-btn"><span>View Project</span></a> -->
-								</div>
-							</div>
-							<div class="col-lg-5 col-md-6">
-								<!-- <div class="remark-thumb" style="background: url(img/r2.jpg);"></div> -->
-								<video width="100%" controls >
-									<source src="vid/orange-vest_Trim.mp4" type="video/mp4">
-								</video>
-							</div>
-						</div>
-					</div>
-					<div class="single-remark">
-						<div class="row no-gutters">
-							<div class="col-lg-7 col-md-6">
-								<!-- <div class="remark-thumb" style="background: url(img/r3.jpg);"></div> -->
-								<img src="img/grasshopper-model.PNG" width="100%">
-							</div>
-							<div class="col-lg-5 col-md-6">
-								<div class="remark-desc">
-									<h4>Grasshopper</h4>
-									<p>Adjustable Floaty Model</p>
-									<!-- <a href="#" class="primary-btn"><span>View Project</span></a> -->
-								</div>
-							</div>
-						</div>
-					</div>
 				</div>
 			</section>
 			<!-- End Remarkable Wroks Area -->
@@ -433,7 +403,7 @@
 	
 
 			<!-- Start Subscription Area -->
-			<section class="subscription-area">
+			<!-- <section class="subscription-area">
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-lg-6">
@@ -456,7 +426,7 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 			<!-- End Subscription Area -->
 			<!-- Start Contact Form -->
 			<!-- <section class="contact-form-area">
@@ -493,7 +463,7 @@
 			<section class="footer-widget-area">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-4">
+						<div class="col-md-6">
 							<div class="single-widget">
 								<div class="desc">
 									<h6 class="title">Members</h6>
@@ -532,12 +502,12 @@
 								<a href="index.html"><img src="img/logo.png" alt=""></a>
 							</div> -->
 							<div class="copy-right-text">Copyright &copy; 2017  |  All rights reserved to <a href="#">Dinomuz inc.</a> Designed by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>
-							<div class="footer-social">
+							<!-- <div class="footer-social">
 								<a href="#"><i class="fa fa-facebook"></i></a>
 								<a href="#"><i class="fa fa-twitter"></i></a>
 								<a href="#"><i class="fa fa-dribbble"></i></a>
 								<a href="#"><i class="fa fa-behance"></i></a>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</footer>
