probably done now

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Favicon-->
-	<link rel="shortcut icon" href="img/fav.png">
+	<link rel="shortcut icon" href="img/favicon.ico">
 	<!-- Author Meta -->
 	<meta name="author" content="CodePixar">
 	<!-- Meta Description -->
@@ -102,37 +102,47 @@
 					<div class="row">
 						<div class="col-md-4">
 							<div class="single-feature">
-								<div class="thumb" style="background: url(img/t1.jpg);"></div>
+								<!-- <div class="thumb" style="background: url(img/t1.jpg);"></div> -->
+								<img src="img/water-pressure-sensor.png" width="90%">
 								<div class="desc text-center mt-30">
 									<h4 class="text-white">Water Pressure Sensor</h4>
 									<p class="text-white">To measure how well the user is swimming, we have a water pressure sensor that detects when the user’s neck is submerged in water. This sensor senses changes in depth.</p>
 									<!-- <a href="#" class="primary-btn"><span>Read More</span></a> -->
 								</div>
+								<br>
+								<img src="img/water-pressure-sensor-real.jpg" width="90%">
 							</div>
 						</div>
 						<div class="col-md-4">
-								<div class="single-feature">
-									<div class="thumb" style="background: url(img/t2.jpg);"></div>
-									<div class="desc text-center mt-30">
-										<h4 class="text-white">Solenoid Valve</h4>
-										<p class="text-white"> To deflate the floaty, we have a solenoid with one end connected to the inside of the floaty and the other leading out to the water. When the solenoid is opened, air will be pushed out of the floaty.
-											</p>
-										<!-- <a href="#" class="primary-btn"><span>Read More</span></a> -->
-									</div>
+							<div class="single-feature">
+								<!-- <div class="thumb" style="background: url(img/t2.jpg);"></div> -->
+								<img src="img/solenoid-valve.png" width="90%">
+								<div class="desc text-center mt-30">
+									<h4 class="text-white">Solenoid Valve</h4>
+									<p class="text-white"> To deflate the floaty, we have a solenoid with one end connected to the inside of the floaty and the other leading out to the water. When the solenoid is opened, air will be pushed out of the floaty.
+									</p>
+									<!-- <a href="#" class="primary-btn"><span>Read More</span></a> -->
 								</div>
+								<br>
+								<img src="img/solenoid-valve-real.png" width="90%">
 							</div>
-							<div class="col-md-4">
-								<div class="single-feature">
-									<div class="thumb" style="background: url(img/t2.jpg);"></div>
-									<div class="desc text-center mt-30">
-										<h4 class="text-white">Servo Motor</h4>
-										<p class="text-white"> 									
-											To inflate the floaty, we have a motor connected to a compressed air can, so when the motor is turned on it pushes the air can to add air to the floaty.
-										</p>
-										<!-- <a href="#" class="primary-btn"><span>Read More</span></a> -->
-									</div>
+						</div>
+						<div class="col-md-4">
+							<div class="single-feature">
+								<!-- <div class="thumb" style="background: url(img/t2.jpg);"></div> -->
+								<img src="img/servo-motor.png" width="90%">
+								<!-- <img src="img/servo-motor.png" width="90%"> -->
+								<div class="desc text-center mt-30">
+									<h4 class="text-white">Servo Motor</h4>
+									<p class="text-white"> 									
+										To inflate the floaty, we have a motor connected to a compressed air can, <br> so when the motor is turned on it pushes the air can to add air to the floaty.
+									</p>
+									<!-- <a href="#" class="primary-btn"><span>Read More</span></a> -->
 								</div>
+								<br>
+								<img src="img/servo-motor-real.png" width="90%">
 							</div>
+						</div>
 			
 					</div>
 				</div>
@@ -200,6 +210,22 @@
 							</div>
 						</div>
 					</div>
+					<div class="single-remark">
+						<div class="row no-gutters">
+							<div class="col-lg-7 col-md-6">
+								<div class="remark-desc">
+									<h4>Full Image</h4>
+									<p>All actuators and servos attached</p>
+									<!-- <a href="#" class="primary-btn"><span>View Project</span></a> -->
+								</div>
+							</div>
+							<div class="col-lg-5 col-md-6">
+								<!-- <div class="remark-thumb" style="background: url(img/r2.jpg);"></div> -->
+								<img src="img/full-on-black.jpg" width="100%">
+							</div>
+						</div>
+					</div>
+
 				</div>
 			</section>
 			<!-- End Remarkable Wroks Area -->
@@ -267,7 +293,7 @@
 								<div class="desc text-center mt-30">
 									<h4 class="text-white">Milestone #3</h4>
 									<p class="text-white">Establish an airtight connection between the solenoid valve and floaty</p>
-									<a href="#" class="primary-btn"><span>Read More</span></a>
+									<!-- <a href="#" class="primary-btn"><span>Read More</span></a> -->
 								</div>
 							</div>
 						</div>
@@ -280,7 +306,7 @@
 								<div class="desc text-center mt-30">
 									<h4 class="text-white">Milestone #4</h4>
 									<p class="text-white">Wire up and connect compressed air container to the floaty</p>
-									<a href="#" class="primary-btn"><span>Read More</span></a>
+									<!-- <a href="#" class="primary-btn"><span>Read More</span></a> -->
 								</div>
 							</div>
 						</div>
@@ -293,7 +319,7 @@
 								<div class="desc text-center mt-30">
 									<h4 class="text-white">Milestone #5</h4>
 									<p class="text-white">Connect all sensors adn actuators to one cohesive system that responds to water depth changes</p>
-									<a href="#" class="primary-btn"><span>Read More</span></a>
+									<!-- <a href="#" class="primary-btn"><span>Read More</span></a> -->
 								</div>
 							</div>
 						</div>
@@ -319,10 +345,11 @@
 										In the static setup, participants practiced treading water with a fully inflated floaty.
 									</p>
 								</div>
-								<p>
+								<div style="float: right;" width="50%">
+									<p>
 									In the adaptive setup, participants practiced treading water with our Adaptive Floaty, which inflated or deflated depending on whether or not they were struggling.
-										
-								</p>
+									</p>
+								</div>
 							</div>
 						</div>
 					</div>
