--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 				</div>
 			</section>
 			<!-- End Remarkable Wroks Area -->
-
+			<br>
 			<!-- Start Story Area -->
 			<section class="story-area">
 				<div class="container">
@@ -407,26 +407,27 @@
 				</div>
 			</section>
 			<!-- End Story Area -->
+			<br>
 			<!-- Start Story Area -->
-			<section class="story-area">
-					<div class="container">
-						<div class="row align-items-center">
-							<div class="col-lg-1">
-							</div>
-							<div class="col-lg-7">
-								<div class="story-box">
-									<h6 class="text-uppercase">Other Files</h6>
-									<a href="code-files/all_together_code.ino"><span class="mr-10">Arduino Code</span></a>
-									<br><br>
-									<a href="code-files/amazing life vest.gh" ><span class="mr-10">Grasshopper File</span><span ></span></a>
-									<br><br>
-									<a href="code-files/amazing life vest.3dm" ><span class="mr-10">Rhino Model</span><span ></span></a>
-								</div>
+			<section class="story-area" id="second-story-area">
+				<div class="container">
+					<div class="row align-items-center">
+						<div class="col-lg-1">
+						</div>
+						<div class="col-lg-7">
+							<div class="story-box">
+								<h6 class="text-uppercase">Other Files</h6>
+								<a href="code-files/all_together_code.ino"><span class="mr-10">Arduino Code</span></a>
+								<br><br>
+								<a href="code-files/amazing life vest.gh" ><span class="mr-10">Grasshopper File</span><span ></span></a>
+								<br><br>
+								<a href="code-files/amazing life vest.3dm" ><span class="mr-10">Rhino Model</span><span ></span></a>
 							</div>
 						</div>
 					</div>
-				</section>
-				<!-- End Story Area -->
+				</div>
+			</section>
+			<!-- End Story Area -->
 	
 
 			<!-- Start Subscription Area -->
