--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 								</video>
 								<div class="desc text-center mt-30">
 									<h4 class="text-white">Milestone #5</h4>
-									<p class="text-white">Connect all sensors adn actuators to one cohesive system that responds to water depth changes</p>
+									<p class="text-white">Connect all sensors and actuators to one cohesive system that responds to water depth changes</p>
 									<!-- <a href="#" class="primary-btn"><span>Read More</span></a> -->
 								</div>
 							</div>
