--- a/index.html
+++ b/index.html
@@ -165,9 +165,7 @@
 							<div class="col-lg-7 col-md-6">
 								<!-- <div class="remark-thumb" style="background: url(img/r1.jpg);"></div> -->
 								<!-- <iframe src="https://drive.google.com/file/d/1-MF3WSH3C1tqEC7yBhhfR--1ycyNELvB/preview" width="100%" height="100%"></iframe>							 -->
-								<video width="100%" controls style="padding: 10px;">
-									<source src="vid/finalVideo.mp4" type="video/mp4">
-								</video>
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/MI60Rzmh8ks" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 							<div class="col-lg-5 col-md-6" ">
 								<div class="remark-desc" style="padding-top: 30%;">
@@ -361,7 +359,7 @@
 								<!-- <video width="100%" controls > -->
 									<!-- <source src="vid/finalVideo.mp4" type="video/mp4"> -->
 								<!-- </video> -->
-								<img src="img/user-study-2.jpg" width="100%">
+								<img src="img/image-not-available.jpg" width="100%">
 							</div>
 							<div class="col-lg-5 col-md-6">
 								<div class="remark-desc">
